{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 67,
  "lineage": "f31f8f06-ecec-e7e2-6a9b-7ed7ac87e7d9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "openvpn_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "openvpn-eip"
                ]
              }
            ],
            "id": "eipalloc-0919e225af1321948",
            "public_dns": "ec2-18-189-209-172.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.209.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "openvpn-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:vpc/vpc-09c2d58ca165a09dc",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-014f4d8594ee4a94a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f4c3c65bfa155a7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "main-vpc"
                ]
              }
            ],
            "id": "vpc-09c2d58ca165a09dc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06eda28ae30e087f2",
            "owner_id": "792334107397",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "generic_load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-024c08f0fc9fc1abf",
            "description": "Allows user to reach private applications over load balancer ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024c08f0fc9fc1abf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public-jenkins-access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "generic-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "792334107397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "generic-load-balancer-security-group"
            },
            "tags_all": {
              "Name": "generic-load-balancer-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-051f82378d2999fe0",
            "description": "Allows user to reach Jenkins UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f82378d2999fe0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "main-vpc-jenkins-access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "18.189.209.172/32"
                ],
                "description": "openvpn-access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-master-server-security-group",
            "name_prefix": "",
            "owner_id": "792334107397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-server-security-group"
            },
            "tags_all": {
              "Name": "jenkins-master-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eip.openvpn_eip",
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-0a2909d7aa7814525",
            "description": "Allows user to reach private applications over VPN ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2909d7aa7814525",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public-openvpn-access",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              }
            ],
            "name": "openvpn-server-security-group",
            "name_prefix": "",
            "owner_id": "792334107397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openvpn-server-security-group"
            },
            "tags_all": {
              "Name": "openvpn-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql_data_import_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-026b5456a95b5e049",
            "description": "Allows user to have connection between postgresql and EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026b5456a95b5e049",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "main-vpc-postgresql-access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-data-import-server-security-group",
            "name_prefix": "",
            "owner_id": "792334107397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgresql-data-import-server-security-group"
            },
            "tags_all": {
              "Name": "postgresql-data-import-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql_database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-0060028b47ec96a54",
            "description": "Allows connection between postgresql and applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0060028b47ec96a54",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "main-vpc-postgresql-access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "18.189.209.172/32"
                ],
                "description": "openvpn-access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-database-security-group",
            "name_prefix": "",
            "owner_id": "792334107397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgresql-database-security-group"
            },
            "tags_all": {
              "Name": "postgresql-database-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eip.openvpn_eip",
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}